--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
         </div>
         <div id="displayResult">
 
+            <div class="loadingsrc bg-white me-auto ms-auto p-5">
+                <img class="gif me-auto ms-auto " src="http://a.top4top.net/p_1990j031.gif" alt="...">
+            </div>
+
         </div>
 
     </section>
